# ga4gh-fedml-hackathon-connect2026

01-access-data-compute/compute/: package-lock.json  package.json
01-access-data-compute/drs-mock/: pyproject.toml
01-access-data-compute/provenance-server/: Dockerfile  README.md  openapi.yaml  pyproject.toml
01-access-data-compute/provenance-server/demo/: docker-compose.yml  run_demo.sh  seed_data.py
01-access-data-compute/provenance-server/src/provenance_server/: __init__.py  config.py  crate.py  database.py  main.py  models.py  trs_client.py
01-access-data-compute/provenance-server/src/provenance_server/routes/: federated.py  query.py  records.py  workflows.py
01-access-data-compute/provenance-server/tests/: conftest.py  test_query.py  test_records.py  test_trs_client.py  test_workflows.py
02-billing-cost-accounting/costing-standard/: README.md
02-billing-cost-accounting/unit-cost-profile/: README.md  node-rate-card-example01.json
