[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-server"
version = "0.1.0"
description = "GA4GH Provenance Server - Beacon for workflow provenance and data elements"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "rocrate>=0.9.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0", "asyncpg>=0.29.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
provenance-server = "provenance_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
